--- a/src/stylesheets/components/textarea.sass
+++ b/src/stylesheets/components/textarea.sass
@@ -1,4 +1,4 @@
-=input
+=textarea
   width: 100%
   display: block
   padding: 5px 10px
@@ -8,7 +8,5 @@
   +box-sizing
   +border-radius(3px)
   +transition(border-color .5s ease)
-  +placeholder-color(#ccc)
-  line-height: 1.3125rem
   &:focus
     border-color: #3699d2
