--- a/src/stylesheets/components/buttons.sass
+++ b/src/stylesheets/components/buttons.sass
@@ -4,6 +4,7 @@
 =button($background: #76b6ec, $color: #fff)
   display: inline-block
   padding: 6px 12px
+  line-height: 1.3125rem
   border: none
   cursor: pointer
   +border-radius(3px)
