Added Licence and generation of minified css

--- a/src/stylesheets/applepie.sass
+++ b/src/stylesheets/applepie.sass
@@ -15,6 +15,7 @@
 @import "components/radio"
 @import "components/checkbox"
 @import "components/select"
+@import "components/navbar"
 @import "components/navigation"
 @import "components/pagination"
 @import "components/tabs"
@@ -28,6 +29,8 @@
 /*--------------------------------------
 /*  [ Navigations ]
 /*---------------------------------------
+.navbar
+  +navbar
 .navigation
   +navigation
 
