--- a/src/stylesheets/components/typography.sass
+++ b/src/stylesheets/components/typography.sass
@@ -18,6 +18,7 @@ body
 
 h1, h2, h3, h4, h5, h6
   font-weight: 400
+  margin: 0
 
 h1
   font-size: 2.25rem
@@ -58,3 +59,4 @@ a
 
 ul, ol
   margin-left: 1.5rem
+  padding-left: 0
