--- a/src/stylesheets/components/navigation.sass
+++ b/src/stylesheets/components/navigation.sass
@@ -1,13 +1,15 @@
 =navigation
   list-style: none
   font-size: 0
+  margin-left: 0
+  padding-left: 0
   li
     +inline-block
     font-size: 0.875rem
     a
       +inline-block
       color: #777
-      padding: 5px 20px
+      padding: 15px 20px
       +transition(color .3s)
       &:hover
         color: #000
