Added labels and fixed typo

--- a/src/stylesheets/applepie.sass
+++ b/src/stylesheets/applepie.sass
@@ -9,6 +9,7 @@
 @import "mixins/css3"
 
 @import "components/typography"
+@import "components/labels"
 @import "components/buttons"
 @import "components/inputs"
 @import "components/textarea"
@@ -31,6 +32,7 @@
 /*---------------------------------------
 .navbar
   +navbar
+
 .navigation
   +navigation
 
@@ -39,6 +41,12 @@
   
 .tabs
   +tabs
+  
+/*--------------------------------------
+/* [Labels]
+/*--------------------------------------
+label
+  +label
 
 /*--------------------------------------
 /*  [ Buttons ]
