--- a/src/stylesheets/components/flashes.sass
+++ b/src/stylesheets/components/flashes.sass
@@ -1,16 +1,13 @@
 =flash
   position: relative
-  padding: 20px
+  padding: 15px 20px
   background: #fff
   color: #999
   border: 1px solid #a5c8e5
   +border-radius(3px)
-  h1
-    margin: 0
-    font-size: 1rem
-    color: #a5c8e5
+  color: #a5c8e5
+
     
 =flash-skin($color: #a5c8e5)
   border-color: $color
-  h1
-    color: $color
+  color: $color
