--- a/src/stylesheets/components/navigation.sass
+++ b/src/stylesheets/components/navigation.sass
@@ -5,11 +5,11 @@
   padding-left: 0
   li
     +inline-block
-    font-size: 0.875rem
+    font-size: 0.9375rem
     a
       +inline-block
       color: #777
       padding: 15px 20px
       +transition(color .3s)
-      &:hover
+      &:hover, &.current
         color: #000
