--- a/src/stylesheets/components/typography.sass
+++ b/src/stylesheets/components/typography.sass
@@ -13,7 +13,7 @@ html
 body
   font-family: 'Titillium Web', sans-serif
   font-size: 0.875rem 
-  line-height: 1.428571429
+  line-height: 1.5
   color: #555
 
 h1, h2, h3, h4, h5, h6
