Added icomoon icons

--- a/src/stylesheets/applepie.sass
+++ b/src/stylesheets/applepie.sass
@@ -8,6 +8,7 @@
 
 @import "mixins/css3"
 
+@import "components/icons"
 @import "components/typography"
 @import "components/labels"
 @import "components/buttons"
