Changed base font-family removed inline-block mixin and fixed some css3 mixins

--- a/src/stylesheets/components/typography.sass
+++ b/src/stylesheets/components/typography.sass
@@ -1,18 +1,16 @@
 /*----------------------------------------------------------------*/
-/*  [ Typography and Colors ]
 /*
 /*  Project: ApplePie
 /*  Version: 0.1.0
 /*  Last change: 24/10/2013
 /*  Primary use: Defining projects typo
 /*----------------------------------------------------------------*/
-@import "http://fonts.googleapis.com/css?family=Titillium+Web:400,700,400italic"
 html
   font-size: 1em
 
 body
-  font-family: 'Titillium Web', sans-serif
-  font-size: 0.875rem 
+  font-family: Verdana, Geneva, sans-serif
+  font-size: 0.8125rem
   line-height: 1.5
   color: #555
 
@@ -41,7 +39,7 @@ h6
   font-size: 0.8125rem
   text-transform: uppercase
   line-height: 1rem
-  
+
 p
   margin: 0 0 1rem 0
 
