--- a/src/stylesheets/mixins/css3.sass
+++ b/src/stylesheets/mixins/css3.sass
@@ -1,14 +1,7 @@
 =animation($properties)
   -webkit-animation: $properties
-  -moz-animation: $properties
-  -ms-animation: $properties
   -o-animation: $properties
   animation: $properties
-
-=background-clip($clip)
-  -webkit-background-clip: $clip
-  -moz-background-clip: $clip
-  background-clip: $clip
 
 =border-radius($properties)
   -webkit-border-radius: $properties
@@ -26,21 +19,18 @@
   -moz-box-sizing: $property
   box-sizing: $property
 
-=inline-block
-  display: -moz-inline-stack
-  display: inline-block
-  zoom: 1
-  _overflow: hidden
-  *display: inline
-
 =opacity($opacity: 1)
   opacity: $opacity
   filter: alpha(opacity=$opacity * 100)
 
 =placeholder-color($color)
+  &::-webkit-input-placeholder
+    color: $color
   &:-moz-placeholder
     color: $color
-  &::-webkit-input-placeholder
+  &::-moz-placeholder
+    color: $color
+  &:-ms-input-placeholder
     color: $color
 
 =rotate($degrees)
@@ -52,14 +42,12 @@
 
 =scale($ratio)
   -webkit-transform: scale($ratio)
-  -moz-transform: scale($ratio)
   -ms-transform: scale($ratio)
   -o-transform: scale($ratio)
   transform: scale($ratio)
 
 =skew($x: 0, $y: 0)
   -webkit-transform: skew($x, $y)
-  -moz-transform: skew($x, $y)
   -ms-transform: skew($x, $y)
   -o-transform: skew($x, $y)
   transform: skew($x, $y)
@@ -71,60 +59,45 @@
 
 =translate($x: 0, $y: 0)
   -webkit-transform: translate($x, $y)
-  -moz-transform: translate($x, $y)
   -ms-transform: translate($x, $y)
   -o-transform: translate($x, $y)
   transform: translate($x, $y)
 
 =translate3d($x: 0, $y: 0, $z: 0)
-  -webkit-transform: translate($x, $y, $z)
-  -moz-transform: translate($x, $y, $z)
-  -ms-transform: translate($x, $y, $z)
-  -o-transform: translate($x, $y, $z)
-  transform: translate($x, $y, $z)
+  -webkit-transform: translate3d($x, $y, $z)
+  transform: translate3d($x, $y, $z)
 
 =transition($properties)
   -webkit-transition: $properties
-  -moz-transition: $properties
   -o-transition: $properties
   transition: $properties
 
-=transform($properties)
-  -webkit-transform: $properties
-  -moz-transform: $properties
-  -o-transform: $properties
-  transform: $properties
-
-=user-select($properties)
+=user-select($properties: none)
   -webkit-user-select: $properties
-  -moz-user-select: -moz-$properties
+  -moz-user-select: $properties
+  -ms-user-select: $properties
   user-select: $properties
 
 =vertical-gradient($from, $to)
   background: $to
-  background-repeat: repeat-x
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $from), color-stop(100%, $to))// Safari 4+, Chrome 2+
-  background-image: -webkit-linear-gradient(top, $from, $to) // Safari 5.1+, Chrome 10+
-  background-image: -moz-linear-gradient(top, $from, $to) // FF 3.6+
-  background-image: -ms-linear-gradient(top, $from, $to) // IE10
-  background-image: -o-linear-gradient(top, $from, $to) // Opera 11.10
-  background-image: linear-gradient(top, $from, $to) // The standard
+  background-image: -webkit-linear-gradient(top, $from, $to)
+  background-image: -moz-linear-gradient(top, $from, $to)
+  background-image: -ms-linear-gradient(top, $from, $to)
+  background-image: -o-linear-gradient(top, $from, $to)
+  background-image: linear-gradient(to bottom, $from, $to)
 
 =horizontal-gradient($from, $to)
   background: $to
-  background-repeat: repeat-x
-  background-image: -webkit-gradient(linear, left top, right top, color-stop(0%, $from), color-stop(100%, $to))
   background-image: -webkit-linear-gradient(left, $from, $to)
   background-image: -moz-linear-gradient(left, $from, $to)
   background-image: -ms-linear-gradient(left, $from, $to)
   background-image: -o-linear-gradient(left, $from, $to)
-  background-image: linear-gradient(left, $from, $to)
+  background-image: linear-gradient(to right, $from, $to)
 
 =directional-gradient($from, $to, $deg)
   background-color: $to
-  background-repeat: repeat-x
-  background-image: -moz-linear-gradient($deg, $from, $to) // FF 3.6+
-  background-image: -ms-linear-gradient($deg, $from, $to) // IE10
-  background-image: -webkit-linear-gradient($deg, $from, $to) // Safari 5.1+, Chrome 10+
-  background-image: -o-linear-gradient($deg, $from, $to) // Opera 11.10
-  background-image: linear-gradient($deg, $from, $to) // The standard
+  background-image: -moz-linear-gradient($deg, $from, $to)
+  background-image: -ms-linear-gradient($deg, $from, $to)
+  background-image: -webkit-linear-gradient($deg, $from, $to)
+  background-image: -o-linear-gradient($deg, $from, $to)
+  background-image: linear-gradient($deg+180, $from, $to)
